# gta-reversed

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ConanPresets.json  Nuevo Documento de texto.bat  README.md  build.cmd  conan-install.sh  conanfile.py  conanprofile.txt  diff.diff  install.bat  install.py  setup.py
source/: Base.h  CMakeLists.txt  HookSystem.h  InjectHooksMain.cpp  InjectHooksMain.h  StdInc.h  config.h  dllmain.cpp  notsa.natvis
source/app/: app.cpp  app.h  app_camera.cpp  app_debug.cpp  app_debug.h  app_game.cpp  app_input.cpp  app_light.cpp  app_light.h
source/app/platform/: SDLWrapper.cpp  SDLWrapper.hpp  platform.cpp  preset_view.cpp
source/app/securom/: Securom.cpp
source/extensions/: CommandLine.cpp  CommandLine.h  Configuration.hpp  EntityRef.hpp  File.hpp  FixedFloat.hpp  WEnum.hpp  ci_string.hpp  debug.hpp  utility.hpp
source/extensions/Configs/: FastLoader.hpp  Miscellaneous.hpp
source/extensions/Shapes/: AngledRect.cpp
source/game_sa/: 3dMarker.cpp  3dMarker.h  3dMarkers.cpp  3dMarkers.h  Accident.h  AccidentManager.cpp  AccidentManager.h  ActiveOccluder.cpp  ActiveOccluder.h  AttractorScanner.h  AutoPilot.cpp  AutoPilot.h  Birds.cpp  Birds.h  BoneNodeManager_c.h  BoneNode_c.cpp  BouncingPanel.cpp  BouncingPanel.h  BreakManager_c.cpp  BreakManager_c.h  BreakObject_c.cpp  BreakObject_c.h  BrightLights.cpp  BrightLights.h  BulletInfo.cpp  BulletInfo.h  BulletTraces.cpp  BulletTraces.h  Buoyancy.cpp  Buoyancy.h  C_PcSave.cpp  C_PcSave.h  Cam.cpp  Cam.h  Camera.cpp  Camera.h  CarAI.cpp  CarCtrl.cpp  CarCtrl.h  CarEnterExit.cpp  (+346 more)
source/game_sa/Animation/: AnimBlendAssocGroup.cpp  AnimBlendAssociation.h  AnimBlendHierarchy.cpp  AnimBlendHierarchy.h  AnimBlendNode.h  AnimBlendSequence.h  AnimManager.cpp  AnimManager.h
source/game_sa/Attractors/: PedAttractor.cpp  PedAttractor.h  PedShelterAttractor.cpp  PedShelterAttractor.h
source/game_sa/Audio/: AEAudioEnvironment.cpp  AEAudioUtility.cpp  AEAudioUtility.h  AESmoothFadeThread.cpp  AESmoothFadeThread.h  AESound.cpp  AESound.h  AEStreamThread.cpp  AudioEngine.cpp  AudioEngine.h  AudioZones.cpp  AudioZones.h
source/game_sa/Collision/: BoundingBox.h  ColAccel.cpp  ColAccel.h  ColData.h  ColDisk.h  ColHelpers.h  ColLighting.h  ColModel.cpp  ColModel.h  ColPoint.h  ColSphere.h  ColStore.cpp  ColStore.h  ColTriangle.cpp  ColTriangle.h  ColTrianglePlane.cpp  ColTrianglePlane.h  Collision.cpp  Collision.h  CollisionData.h  CollisionEventScanner.cpp  ColourSet.h  TempColModels.h
source/game_sa/Conversations/: ConversationForPed.cpp  ConversationForPed.h  ConversationNode.cpp  ConversationNode.h  Conversations.cpp  Conversations.h  PedToPlayerConversations.cpp  PedToPlayerConversations.h  TempConversationNode.h
source/game_sa/Core/: EntryInfoList.h  EntryInfoNode.cpp  Matrix.cpp  Matrix.h  MatrixLinkList.cpp  OctTree.cpp  OctTree.h  OctTreeBase.cpp  Pool.h  PtrList.cpp  PtrList.h  PtrListDoubleLink.h  PtrListSingleLink.h  PtrNode.h  PtrNodeDoubleLink.cpp  PtrNodeDoubleLink.h  PtrNodeSingleLink.cpp  PtrNodeSingleLink.h  QuadTreeNode.cpp  Quaternion.cpp  Quaternion.h  Rect.h  SArray.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h
source/game_sa/DecisionMakers/: Decision.cpp  Decision.h  DecisionMaker.cpp  DecisionMaker.h  DecisionMakerTypes.cpp  DecisionMakerTypes.h  DecisionMakerTypesFileLoader.cpp  DecisionMakerTypesFileLoader.h  DecisionSimple.h
source/game_sa/Entity/: AnimatedBuilding.cpp  Building.cpp  Building.h  Entity.cpp  Entity.h  Physical.cpp  Physical.h  Placeable.cpp  Placeable.h
source/game_sa/Enums/: AnimationEnums.h  eAreaCodes.h  eBoneTag.h  eCamMode.h  eCarMission.h  eCarNodes.h  eCarWheel.h  eClothesRules.h  eClothesTexturePart.h  eControllerType.h  eCrimeType.h  eEntityStatus.h  eInputs.h  eLanguage.h  eModelID.h  eMoveState.h  eMovieCam.h  ePedType.h  eRadioID.h  eScriptCommands.h  eSurfaceType.h  eTaskType.h  eVisibleArea.h  eWantedLevel.h  eWeaponType.h
source/game_sa/Events/: Event.cpp  Event.h  EventAreaCodes.cpp  EventAttractor.cpp  EventBuildingCollision.cpp  EventBuildingCollision.h  EventCopCarBeingStolen.cpp  EventDamage.cpp  EventDamage.h  EventDeadPed.cpp  EventEditableResponse.cpp  EventEditableResponse.h  EventGroupEvent.cpp  EventGroupEvent.h  EventGunAimedAt.cpp  EventGunShot.cpp  EventGunShot.h  EventHandler.cpp  EventKnockOffBike.cpp  EventObjectCollision.cpp  EventObjectCollision.h  EventPedCollisionWithPed.cpp  EventPedCollisionWithPed.h  EventPedCollisionWithPlayer.cpp  EventPedCollisionWithPlayer.h  EventPlayerCollisionWithPed.cpp  EventPlayerCollisionWithPed.h  EventPotentialWalkIntoObject.cpp  EventPotentialWalkIntoObject.h  EventPotentialWalkIntoVehicle.cpp  EventScanner.cpp  EventScanner.h  EventScriptedAttractor.h  EventSexyPed.h  EventVehicleCollision.cpp  EventVehicleCollision.h  EventVehicleDamage.cpp  EventVehicleHitAndRun.cpp  EventVehicleToSteal.cpp  GroupEventHandler.cpp  (+1 more)
source/game_sa/Frontend/: FrontendScreensPC.h  MenuManager_Draw.cpp  MenuManager_Input.cpp  MenuManager_Internal.h  MenuManager_Pages.cpp  MenuManager_Process.cpp
source/game_sa/Fx/: CarFXRenderer.cpp  CarFXRenderer.h  Fx.cpp  Fx.h  FxEmitter.cpp  FxEmitter.h  FxEmitterBP.cpp  FxEmitterPrt.cpp  FxFrustumInfo.cpp  FxFrustumInfo.h  FxInfoManager.cpp  FxManager.cpp  FxManager.h  FxPrim.h  FxSphere.cpp  FxSphere.h  FxSystem.cpp  FxSystem.h  FxSystemBP.cpp  MovementInfo.h  RenderInfo.h
source/game_sa/Interior/: FurnitureEntity_c.h  FurnitureGroup_c.cpp  FurnitureGroup_c.h  FurnitureManager_c.cpp  FurnitureManager_c.h  FurnitureSubGroup_c.cpp  FurnitureSubGroup_c.h  Furniture_c.h  InteriorEffectInfo_t.h  InteriorGroup_c.cpp  InteriorGroup_c.h  InteriorInfo_t.h  InteriorManager_c.cpp  InteriorManager_c.h  InteriorObject.h  Interior_c.cpp  Interior_c.h
source/game_sa/Pools/: Pools.h  (+25 more)
source/oswrapper/: oswrapper_win.cpp
source/reversiblebugfixes/: Bugs.hpp  ReversibleBugFix.hpp
source/reversiblehooks/: ReversibleHooks.cpp  ReversibleHooks.h
source/toolsmenu/: UIRenderer.cpp  UIRenderer.h  Utility.h
(+628 files in other folders)
